# FeedbackAI-Analyzer

./: DELIVERABLES.md  MERGE.md  README.md  package-lock.json  package.json
backend/: README.md  requirements.txt
backend/app/agent/: core.py
backend/app/agent/tools/: __init__.py
backend/app/models/: __init__.py  feedback.py
backend/evaluation/: README.md  __init__.py  evaluator.py  golden_dataset.py  quick_eval.py  retrievers.py  run_naive_vs_advanced.py
backend/scripts/: generate_data.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
python-backend/: .env.example  pyproject.toml
python-backend/backend/: config.py  main.py
python-backend/backend/agent/: __init__.py
python-backend/backend/agent/storage/: __init__.py  vector_store.py
python-backend/backend/agent/tools/: feedback_search.py  web_search.py
python-backend/backend/data/: feedback_corpus.csv
python-backend/backend/models/: agent.py  requests.py  responses.py
python-backend/evaluation/: run_all_retrievers.py
python-backend/results/: all_retrievers_results.md
